tests/sealed_tvars/sealed_tvars.exp
Error -------------------------------------------------------------------------------------------- error_examples.js:4:1

Internal error: read of Env_api.Make.ClassInstanceSuperLoc entry which has not been prepared for typechecking

   4| class C { }
      ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- error_examples.js:4:1

Internal error: read of Env_api.Make.ClassInstanceThisLoc entry which has not been prepared for typechecking

   4| class C { }
      ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- error_examples.js:4:1

Internal error: read of Env_api.Make.ClassStaticSuperLoc entry which has not been prepared for typechecking

   4| class C { }
      ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- error_examples.js:4:1

Internal error: read of Env_api.Make.ClassStaticThisLoc entry which has not been prepared for typechecking

   4| class C { }
      ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- error_examples.js:4:7

Internal error: unconstrained tvar during tvar resolution

   4| class C { }
            ^



Found 5 errors
